Merge branch 'apps-7691' into 'main'
APPS-7691 common - Statistics features in Spreadsheet

See merge request ggb/geogebra!10570

GitOrigin-RevId: 65de4b39354965a1bddd9afef02862a596101573